--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,10 +16,13 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>FreeCodeCamp Leaderboard</span>―<span class='caption--implementation'>React, jQuery, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Alternate Portfolio Website</span>―<span class='caption--implementation'>HTML5+Canvas, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Alternate Portfolio Website</span>―<span class='caption--implementation'>HTML5+Canvas, SCSS, and JS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/QNEKmj'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/recipebox.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Recipe Box</span>―<span class='caption--implementation'>React, JS, and SCSS</span></div></a>
+    </div> 
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Simon Game</span>―<span class='caption--implementation'>Haml, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span>―<span class='caption--implementation'>React, marked library, JS, and SCSS</span></div></a>
@@ -28,7 +31,7 @@ in-nav: true
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Tic-Tac-Toe</span>―<span class='caption--implementation'>HTML5, SVG, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Simon Game</span>―<span class='caption--implementation'>Haml, SCSS, and JS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>FreeCodeCamp Leaderboard</span>―<span class='caption--implementation'>React, jQuery, JS, and SCSS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBNgE'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/pomodoro.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Pomodoro Timer</span>―<span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
