--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,10 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/bpRJJR'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/scatterplot.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Scatterplot</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+    </div>
+
+    <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/BKZZNv'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/barchart.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Bar Chart</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
