Add force-directed graph project to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,9 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/WwERoW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/forcedirected.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Force-Directed Graph</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+    </div>
+    <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/EKvxom'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/heatmap.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Heat Map</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
