--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,16 +16,19 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/WwERoW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/forcedirected.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Force-Directed Graph</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ONjxVW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/meteorite.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Meteorite Landings</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/EKvxom'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/heatmap.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Heat Map</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/WwERoW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/forcedirected.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Force-Directed Graph</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/bpRJJR'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/scatterplot.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Scatterplot</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/EKvxom'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/heatmap.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Temperature Heat Map</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/BKZZNv'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/barchart.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Responsive Bar Chart</span>―<span class='caption--implementation'>D3.js, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/bpRJJR'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/scatterplot.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Doping Scatterplot</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+    </div>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/BKZZNv'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/barchart.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>GDP Bar Chart</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RaVVdJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/roguelike.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Roguelike Game</span>―<span class='caption--implementation'>React, JS, and SCSS</span></div></a>
@@ -34,7 +37,7 @@ in-nav: true
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/KzaxMB'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/gameoflife.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Game of Life</span>―<span class='caption--implementation'>React, JS, and SCSS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Alternate Portfolio Website</span>―<span class='caption--implementation'>HTML5+Canvas, SCSS, and JS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Alternate Portfolio Website</span>―<span class='caption--implementation'>HTML5+Canvas, SCSS, and JS<br></span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/QNEKmj'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/recipebox.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Recipe Box</span>―<span class='caption--implementation'>React, JS, and SCSS</span></div></a>
@@ -43,19 +46,19 @@ in-nav: true
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Tic-Tac-Toe</span>―<span class='caption--implementation'>HTML5, SVG, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span>―<span class='caption--implementation'>React, marked library, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span>―<span class='caption--implementation'>React, marked library, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Simon Game</span>―<span class='caption--implementation'>Haml, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>FreeCodeCamp Leaderboard</span>―<span class='caption--implementation'>React, jQuery, JS, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>FreeCodeCamp Leaderboard</span>―<span class='caption--implementation'>React, jQuery, JS, and SCSS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBNgE'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/pomodoro.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Pomodoro Timer</span>―<span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/VeoxdQ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/wiki.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Wikipedia Viewer</span>―<span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/VeoxdQ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/wiki.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Wikipedia Viewer</span>―<span class='caption--implementation'>HTML5, SCSS, and JS<br>Responsive</span></div></a>
     </div>
     <div class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/wMVPwJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/calculator.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Calculator</span>―<span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
