--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,4 +76,7 @@ in-nav: true
     <li class='grid-4-of-12 portfolio__project'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/jWdLjp'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tribute.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Paul Walker Tribute Page</span>―<span class='caption--implementation'>HTML5 and SCSS</span></div></a>
     </li>
+    <li class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/zqdPPo'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/timolawllogo.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Clockwork Spinning Logo</span>―<span class='caption--implementation'>SVG and SCSS<br>Responsive</span></div></a>
+    </li>
 </ul>
