--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,10 +17,13 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='//timolawl-header-parser.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/headerparser.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Header Parser Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, gulp.js, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//timolawl-url-shortener.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/urlshortener.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>URL Shortener Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, MongoDB, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='//timolawl-timestamp.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/timestamp.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Timestamp Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, gulp.js, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='//timolawl-header-parser.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/headerparser.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Header Parser Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
+    </li>
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='//timolawl-timestamp.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/timestamp.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Timestamp Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ONjxVW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/meteorite.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Meteorite Landings</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
