--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,10 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='//timolawl-file-metadata.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/filemetadata.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>File Metadata Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
+    </li>
+
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='//timolawl-image-search.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/imagesearch.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Image Search Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, MongoDB, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
