--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -63,7 +63,7 @@ in-nav: true
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Tic-Tac-Toe</span>―<span class='caption--implementation'>HTML5, SVG, SCSS, and JS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span>―<span class='caption--implementation'>React, marked library, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span>―<span class='caption--implementation'>React, JS, and SCSS<br>Responsive</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Simon Game</span>―<span class='caption--implementation'>Haml, SCSS, and JS</span></div></a>
