--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Contact
 in-nav: true
 ---
-<form class="contact__form" action="//formspree.io/timolawl@gmail.com" method="POST">
+<form class="contact__form" action="https://formspree.io/timolawl@gmail.com" method="POST">
     <div class="contact-outerwrap">
         <div class="contact-wrapper">
             <input type="text" name="name" id="contact__form--name" class="contact__form--name" placeholder="Name" required />
@@ -12,7 +12,7 @@ in-nav: true
             <input type="email" name="_replyto" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
         </div>
 
-        <input type="hidden" name="_next" value="//timolawl.github.io/contact/thanks/index.html" />
+        <input type="hidden" name="_next" value="https://timolawl.github.io/contact/thanks/index.html" />
         <input type="text" name="_gotcha" style="display:none" />
 
         <div class="contact-wrapper">
