Add fcc-voting app to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,35 +17,37 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-file-metadata.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/filemetadata.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>File Metadata Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
-    </li>
-
-    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-image-search.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/imagesearch.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Image Search Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, MongoDB, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-voting.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/voting.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Real-Time Voting App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Pug...</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-url-shortener.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/urlshortener.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>URL Shortener Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, MongoDB, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-file-metadata.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/filemetadata.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>File Metadata Microservice</span>―<span class='caption--implementation'>Node, Express, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-header-parser.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/headerparser.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Header Parser Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-image-search.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/imagesearch.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Image Search Microservice</span>―<span class='caption--implementation'>Node, Express, MongoDB, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-timestamp.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/timestamp.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Timestamp Microservice</span>―<span class='caption--implementation'>Node.js, Express.js, JS, HTML5, and SCSS</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-url-shortener.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/urlshortener.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>URL Shortener Microservice</span>―<span class='caption--implementation'>Node, Express, MongoDB, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/ONjxVW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/meteorite.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Meteorite Landings</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-header-parser.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/headerparser.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Header Parser Microservice</span>―<span class='caption--implementation'>Node, Express, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/WwERoW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/forcedirected.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Force-Directed Graph</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-timestamp.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/timestamp.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Timestamp Microservice</span>―<span class='caption--implementation'>Node, Express, JS, HTML5, and SCSS</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/EKvxom'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/heatmap.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Temperature Heat Map</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/ONjxVW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/meteorite.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Meteorite Landings</span>―<span class='caption--implementation'>D3, JS, and SCSS<br>Responsive</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/bpRJJR'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/scatterplot.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Doping Scatterplot</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/WwERoW'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/forcedirected.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Force-Directed Graph</span>―<span class='caption--implementation'>D3, JS, and SCSS<br>Responsive</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/BKZZNv'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/barchart.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>GDP Bar Chart</span>―<span class='caption--implementation'>D3.js, JS, and SCSS<br>Responsive</span></div></a>
+        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/EKvxom'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/heatmap.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Temperature Heat Map</span>―<span class='caption--implementation'>D3, JS, and SCSS<br>Responsive</span></div></a>
+    </li>
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/bpRJJR'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/scatterplot.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Doping Scatterplot</span>―<span class='caption--implementation'>D3, JS, and SCSS<br>Responsive</span></div></a>
+    </li>
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/BKZZNv'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/barchart.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>GDP Bar Chart</span>―<span class='caption--implementation'>D3, JS, and SCSS<br>Responsive</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='https://codepen.io/timchiang/full/RaVVdJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/roguelike.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Roguelike Game</span>―<span class='caption--implementation'>React, JS, and SCSS</span></div></a>
