--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,9 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='https://timolawl-nightlife.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/nightlife.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Nightlife Coordination App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Masonry..</span></div></a>
+    </li>
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='https://timolawl-voting.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/voting.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Real-Time Voting App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Pug...</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
