--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,17 +17,17 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-bookclub.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/bookclub.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Book Trading App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Google Books API</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-bookclub.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/bookclub.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Book Trading App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Google Books API, Socket.io, Passport</span></div></a>
     </li>
 
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-stocks.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/stocks.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Stock Market App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Highcharts, Socket.io, Foundation..</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-stocks.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/stocks.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Stock Market App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Highcharts, Socket.io, Foundation</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-nightlife.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/nightlife.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Nightlife Coordination App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Masonry..</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-nightlife.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/nightlife.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Nightlife Coordination App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Masonry</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
-        <a class='portfolio__project-link' href='https://timolawl-voting.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/voting.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Real-Time Voting App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Chartjs..</span></div></a>
+        <a class='portfolio__project-link' href='https://timolawl-voting.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/voting.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Real-Time Voting App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Socket.io, Passport, Chartjs</span></div></a>
     </li>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='https://timolawl-file-metadata.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/filemetadata.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>File Metadata Microservice</span>―<span class='caption--implementation'>Node, Express, JS, HTML5, and SCSS</span></div></a>
