--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,9 +17,11 @@ in-nav: true
 
 <ul class='grid'>
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
+        <a class='portfolio__project-link' href='https://timolawl-pinteresque.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/pinteresque.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Pinterest Clone</span>―<span class='caption--implementation'>Node, Express, Mongoose, Masonry, Passport</span></div></a>
+    </li>
+    <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='https://timolawl-bookclub.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/bookclub.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Book Trading App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Google Books API, Socket.io, Passport</span></div></a>
     </li>
-
     <li class='grid-4-of-12 portfolio__project is-opacity-invisible'>
         <a class='portfolio__project-link' href='https://timolawl-stocks.herokuapp.com'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/stocks.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Stock Market App</span>―<span class='caption--implementation'>Node, Express, Mongoose, Highcharts, Socket.io, Foundation</span></div></a>
     </li>
