set width for responsiveness

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ Version 1.4 - Sequential loading of portfolio project images.</p>
 <div class="home__content">
   <div class="home__current-projects">
     <p class="project__title">freeCodeCamp's Arcade Mode</p>
-    <a class="project__snapshot" href="//freecodecamp.github.io/arcade-mode" title="freeCodeCamp's Arcade Mode"><img src='{{ "/static/images/current-projects/FCCArcadeMode.png" | prepend: site.baseurl }}'></a>
-    <p class="project__summary"><a href="//github.com/freecodecamp/arcade-mode">freeCodeCamp's Arcade Mode</a> is a whiteboard interview preparation app featuring algorithm and data structure challenges in a timed environment. It boasts offline capability, benchmarking, and real-life relevant programming problems. The technology stack includes React, Redux, IndexedDB, AppCache, web and service workers, among other things. Estimated completion at the end of summer 2017.</p>
+    <a class="project__link" href="//freecodecamp.github.io/arcade-mode" title="freeCodeCamp's Arcade Mode"><img class="project__snapshot" src='{{ "/static/images/current-projects/FCCArcadeMode.png" | prepend: site.baseurl }}'></a>
+    <p class="project__summary"><a class="project__github" href="//github.com/freecodecamp/arcade-mode">freeCodeCamp's Arcade Mode</a> is a whiteboard interview preparation app featuring algorithm and data structure challenges in a timed environment. It boasts offline capability, benchmarking, and real-life relevant programming problems. The technology stack includes React, Redux, IndexedDB, AppCache, web and service workers, among other things. Estimated completion at the end of summer 2017.</p>
   </div>
 
 <!--
