--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Version 1.4 - Sequential loading of portfolio project images.</p>
     <img class="project__snapshot" src='{{ "/static/images/current-projects/FCCArcadeMode.png" | prepend: site.baseurl }}' alt="Screenshot of freeCodeCamp's Arcade Mode">
   </a>
   <p class="project__summary"><a class="project__github" href="//freecodecamp.github.io/arcade-mode">freeCodeCamp's Arcade Mode</a> is a whiteboard interview preparation app featuring algorithm and data structure challenges in a timed environment. It boasts offline capability, benchmarking, and real-life relevant programming problems. The technology stack includes React, Redux, IndexedDB, AppCache, and web and service workers, among others. Estimated time of completion is at the end of summer 2017.</p>
-  <p class="project__github"><a class="project__github" href="//github.com/freecodecamp/arcade-mode">Project GitHub repository</a>.</p>
+  <p class="project__github"><a class="project__github" href="//github.com/freecodecamp/arcade-mode">Project GitHub repository</a></p>
 
 <!--
 
